backend-deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: backend
    labels:
      app: backend
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: backend
    template:
      metadata:
        labels:
          app: backend
      spec:
        containers:
        - name: backend
          image: sadiqmohamedamine/spring-ebanking:v1
          ports:
          - containerPort: 8080
