frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: osmel123/angular-docker:v2
        ports:
        - containerPort: 4200
        args: ["ng", "serve", "--host", "0.0.0.0", "--disable-host-check"]
