frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
  - port: 4200
    targetPort: 4200
  selector:
    app: frontend
